refactor: removed husky

--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
     "main": "sudoku.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "release": "standard-version",
-        "prepare": "husky install"
+        "release": "standard-version"
     },
     "repository": {
         "type": "git",
